Minor tidying.