@@ -8,7 +8,6 @@ import org.junit.platform.launcher.LauncherDiscoveryRequest;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 
 public class LauncherDiscoveryListenerCapturingReplayedUniqueIds
@@ -25,7 +24,7 @@ public class LauncherDiscoveryListenerCapturingReplayedUniqueIds
                                            .getSelectorsByType(UniqueIdSelector.class)
                                            .stream()
                                            .map(UniqueIdSelector::getUniqueId)
-                                           .collect(Collectors.toList()));
+                                           .toList());
 
         LauncherDiscoveryListener.super.launcherDiscoveryStarted(request);
     }
